Binary classification model for rice grains

--- a/ml/cc/exercises/binary_classification_rice.ipynb
+++ b/ml/cc/exercises/binary_classification_rice.ipynb
@@ -3106,6 +3106,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "cellView": "form",
         "outputId": "8d73a19a-def3-4326-f845-ec169527b902"
       },
       "outputs": [
@@ -3121,6 +3122,7 @@
         }
       ],
       "source": [
+        "# @title\n",
         "ml_edu.results.compare_experiment([experiment, experiment_all_features],\n",
         "                                  ['accuracy', 'auc'],\n",
         "                                  test_features, test_labels)"
